# gifstream

./: Aufgabe.tex  GameOfLife.hs  Gif.hs  GifStream.hs  LICENSE  LZW.hs  MSignal.hs  Main.hs  Net.hs  README.md  Snake.hs  Snake1.hs  SnakeFinished.hs  Tetris.hs  aufgabe  aufgabe.tex  gif.hs  snake.cabal
